# create-fastapi-app

./: README.md  pyproject.toml  requirements.txt
base_project/: main.py
base_project/config/: __init__.py
cfa/: cli.py
cfa/commands/: command_builder.py
cfa/commands/impl/: dependency_installer.py  dir_creator.py  git_clone.py
cfa/config/: __init__.py
cfa/helpers/: logger.py
create-fastapi-app/: main.py
create-fastapi-app/commands/: ICommand.py  command_builder.py  dependency_installer.py
create-fastapi-app/commands/impl/: clone_git.py  dependency_installer.py  dir_creator.py
create-fastapi-app/config/: __init__.py
create-fastapi-app/executors/: command_executor.py
