[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-fastapi"
description = "create-fastapi-app"
readme = "README.md"
version = "0.0.9"

authors = [{ name = "Shahar Luftig", email = "shaharluftig@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = [
    "backend",
    "fastapi",
    "create-app",
    "create-fastapi-app",
    "create-fatapi",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = ["typer~=0.9.0", "virtualenv~=20.24.1", "GitPython~=3.1.32"]

[project.urls]
"Homepage" = "https://github.com/shaharluftig/create-fastapi-app"


[project.scripts]
create-fastapi-app = "cfa.cli:main_cli"